Fix: Close button needs a higher z-index
https://datatables.net/forums/discussion/72646/searchbuilder-close-button-inaccessible-when-using-bootstrap-5#latest

--- a/css/common.scss
+++ b/css/common.scss
@@ -45,7 +45,7 @@ div.dtb-popover-close {
 	text-align: center;
 	border-radius: 3px;
 	cursor: pointer;
-	z-index: 12;
+	z-index: 2003;
 }
 
 button.dtb-hide-drop {
